--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
             </div>
         </div>
 
+        <div class="victoryText">
+            <h2>Amount of sessions</h2>
+        </div>
+
+        <div class="victoryPic">
+            <img src="yellow.png" alt="">
+        </div>
     </div>
 
     <div class="footer">
