--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="logic.js" defer></script>
+    <script src="logic_obj.js" defer></script>
     <title>Pomodoro Timer</title>
 </head>
 <body>
